examples/invalid/test11.alice

The looking-glass main () contained a number
opened
  .
closed
